grammar.js
    source_file: $ => optional(choice(
      repeat1(choice(
        $.module_extension_definition,
        $.module_definition,
        $.address_block,
      )),
      repeat1($._snippet_item),
    )),

    // Legacy address blocks: `address 0x42 { module m { ... } }`. Still parsed
    // by the Move compiler, so accept them for editor robustness.
    _snippet_item: $ => choice(
      $.hover_function,
      $.hover_struct,
      $.hover_enum,
      $.hover_variant,
      $.hover_const,
      $.hover_local,
      $.hover_module,
      $._type,
    ),

    // Qualified-name prefix like `sui::coin::` or `0x2::coin::` used by hover
    // signatures, which always render fully-qualified member names.
    module_definition: $ => {
      return seq(
        'module',
        // The bare-identifier form covers legacy modules inside `address` blocks.
        field('module_identity', choice($.module_identity, $._module_identifier)),
        field('module_body', $.module_body),
      );
    },
    module_body: $ => {
      const item = choice(
        $.use_declaration,
        $.friend_declaration,
        $.constant,
        $._function_item,
        $._struct_item,
        $._enum_item,
        $.spec_block,
      );
      // prec.right so that after `module a::b;` subsequent items are consumed
      // into the module body rather than parsed as top-level snippet items.
      return choice(
        prec.right(seq(';', repeat(item))),
        seq('{', repeat(item), '}'),
      );
    },

    // Annotations
    _enum_item: $ => choice(
      $.enum_definition,
    ),
    _struct_item: $ => choice(
      $.native_struct_definition,
      $.struct_definition,
    ),
    _function_item: $ => choice(
      $.native_function_definition,
      $.native_macro_function_definition,
      $.macro_function_definition,
      $.function_definition,
    ),
    function_definition: $ => seq(
      $._function_signature,
      field('body', $.block)
    ),
    _function_signature: $ => seq(
      repeat($.modifier),
      'fun',
      field('name', $._function_identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.function_parameters),
      optional(field('return_type', $.ret_type)),
    ),
    function_parameters: $ => seq(
      '(',
      sepBy(',', choice($.mut_function_parameter, $.function_parameter)),
      ')',
    ),

    // Spec block start
    _type: $ => choice(
      $.apply_type,
      $.ref_type,
      $.tuple_type,
      $.function_type,
      $.primitive_type,
    ),
    apply_type: $ => prec.left(PRECEDENCE.apply_type, seq(
      $.module_access,
      optional(field('type_arguments', $.type_arguments)),
    )),
    ref_type: $ => seq(
      $._reference,
      $._type
    ),
    primitive_type: $ => choice(
      'u8',
      'u16',
      'u32',
      'u64',
      'u128',
      'u256',
      'bool',
      'address',
      'signer',
    ),
    ret_type: $ => seq(':', $._type),

    // Unified name-access chain (the compiler's NameAccessChain model): any
    // number of `module:`-tagged prefix segments, each optionally carrying
    // type arguments, ending in a `member:`. `a::b` is module::member,
    // `a::b::C::D` is module::module::module::member — semantic roles
    // (module vs enum vs variant) are a naming-convention concern for
    // queries, exactly as in the compiler's AST. The dynamic precedence
    // prefers the path/type-arguments reading over `<`/`>` comparisons.
    module_access: $ => choice(
      // macro variable access
      seq('$', field('member', $.identifier)),
      // address access
      seq('@', field('member', $.identifier)),
      seq(
        field('member', alias($._reserved_identifier, $.identifier)),
        optional(field('type_arguments', $.type_arguments)),
      ),
      seq(
        field('member', $.identifier),
        optional(field('type_arguments', $.type_arguments)),
      ),
      prec.dynamic(1, seq(
        repeat1(choice(
          // a leading numeric address takes no type arguments
          seq(field('module', $.num_literal), '::'),
          seq(
            field('module', $._module_identifier),
            optional(field('type_arguments', $.type_arguments)),
            '::',
          ),
        )),
        field('member', $.identifier),
        optional(field('type_arguments', $.type_arguments)),
      )),
    ),

    module_identity: $ =>
      seq(
        field('address', choice($.num_literal, $._module_identifier)),
        '::',
        field('module', $._module_identifier)
      ),

    // KNOWN DIVERGENCE (backlog P6): the compiler only reads `<` as type
    // arguments in expression position when it is ADJACENT to the name, so
    // `h(a < b, c > (d))` is two comparisons. token.immediate cannot express
    // this here because whitespace is an extras token (once the whitespace
    // token is shifted, `<` is "immediate" again); the fix would need the
    // scanner to own whitespace and track adjacency state. See
    // test/corpus/known_failures.txt.
    type_arguments: $ => seq(
      '<',
      sepBy1(',', $._type),
      '>'
    ),

    function_parameter: $ => seq(
      choice(
        field('name', $._variable_identifier),
        seq('$', field('name', $._variable_identifier)),
      ),
      ':',
      field('type', $._type),
    ),

    // type parameter grammar; the parameter list may be empty (`struct S<>()`)
    block: $ => seq(
      '{',
      repeat($.use_declaration),
      repeat($.block_item),
      optional($._expression),
      '}'
    ),
    block_item: $ => seq(
      choice(
        $._expression,
        $.let_statement,
      ),
      ';'
    ),
    let_statement: $ => seq(
      'let',
      field('binds', $.bind_list),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('expr', $._expression)))
    ),
    // Block end


    // Expression

    _expression: $ => choice(
      $.call_expression,
      $.macro_call_expression,
      $.lambda_expression,
      $.if_expression,
      $.while_expression,
      $.return_expression,
      $.abort_expression,
      $.assign_expression,
      // unary expression is included in binary_op,
      $._unary_expression,
      $.binary_expression,
      $.cast_expression,
      $.quantifier_expression,
      $.match_expression,
      $.vector_expression,
      $.loop_expression,
      $.identified_expression,
    ),

    identified_expression: $ => choice(
      seq(field('expression_id', $.block_identifier), $._expression),
      prec(PRECEDENCE.block_tail,
        seq(field('expression_id', $.block_identifier), $.block)),
    ),

    // `vector` here is the external-scanner token, emitted only when followed
    // by `[` or `<` (see src/scanner.c), so this cannot shadow ordinary uses
    // of `vector` as a module name.
    vector_expression: $ => seq(
      alias($._vector_keyword, 'vector'),
      optional(seq('<', sepBy1(',', $._type), '>')),
      '[',
      sepBy(",", $._expression),
      "]"
    ),

    if_expression: $ => choice(
      prec.right(seq(
        'if', '(', field('eb', $._expression), ')',
        field('et', $._expression),
        'else',
        field('ef', $._expression),
      )),
      prec.right(PRECEDENCE.block_tail, seq(
        'if', '(', field('eb', $._expression), ')',
        field('et', $._expression),
        'else',
        field('ef', $.block),
      )),
      prec.right(seq(
        'if', '(', field('eb', $._expression), ')',
        field('et', $._expression),
      )),
      prec.right(PRECEDENCE.block_tail, seq(
        'if', '(', field('eb', $._expression), ')',
        field('et', $.block),
      )),
    ),

    // while expression
    loop_expression: $ => choice(
      seq('loop', field('body', $._expression)),
      prec(PRECEDENCE.block_tail, seq('loop', field('body', $.block))),
    ),

    // return expression
    return_expression: $ => choice(
      prec.left(seq(
        'return',
        optional(field('label', $.label)),
        field('return', $._expression)
      )),
      prec(PRECEDENCE.block_tail, seq(
        'return',
        optional(field('label', $.label)),
        field('return', $.block)
      )),
      prec(-1, seq('return', optional(field('label', $.label)))),
    ),

    // abort expression
    abort_expression: $ => choice(
      seq('abort', optional(field('abort', $._expression))),
      prec(PRECEDENCE.block_tail, seq('abort', field('abort', $.block))),
    ),

    match_expression: $ => seq(
      'match',
      '(',
      field('match_scrutiny', $._expression),
      ')',
      $._match_body,
    ),

    _match_body: $ => seq(
      '{',
      sepBy(',', $.match_arm),
      '}',
    ),

    match_arm: $ => seq(
      $.bind_list,
      optional($.match_condition),
      '=>',
      $._expression,
    ),

    call_expression: $ => prec.dynamic(1, seq(
      $.name_expression,
      field('args', $.arg_list),
    )),
    name_expression: $ => seq(
      optional('::'),
      field('access', $.module_access),
    ),

    assign_expression: $ => prec.left(PRECEDENCE.assign,
      seq(
        field('lhs', $._unary_expression),
        '=',
        field('rhs', $._expression)
      )
    ),

    binary_expression: $ => {
      const table = [
        [PRECEDENCE.implies, '==>'],
        [PRECEDENCE.implies, '<==>'],
        [PRECEDENCE.or, '||'],
        [PRECEDENCE.and, '&&'],
        [PRECEDENCE.eq, '=='],
        [PRECEDENCE.neq, '!='],
        [PRECEDENCE.lt, '<'],
        [PRECEDENCE.gt, '>'],
        [PRECEDENCE.le, '<='],
        [PRECEDENCE.ge, '>='],
        [PRECEDENCE.range, '..'],
        [PRECEDENCE.bitor, '|'],
        [PRECEDENCE.xor, '^'],
        [PRECEDENCE.bitand, '&'],
        [PRECEDENCE.shl, '<<'],
        [PRECEDENCE.shr, '>>'],
        [PRECEDENCE.add, '+'],
        [PRECEDENCE.sub, '-'],
        [PRECEDENCE.mul, '*'],
        [PRECEDENCE.div, '/'],
        [PRECEDENCE.mod, '%']
      ];

      let binary_expression = choice(...table.map(
        ([precedence, operator]) => prec.left(precedence, seq(
          field('lhs', $._expression),
          field('operator', alias(operator, $.binary_operator)),
          field('rhs', $._expression),
        ))
      ));

      return binary_expression;
    },

    _unary_expression: $ => prec(11, choice(
      $.unary_expression,
      $.borrow_expression,
      $.dereference_expression,
      $.move_or_copy_expression,
      $._expression_term,
    )),
    // Prefix operators take a unary-level operand, as in the compiler's
    // parse_unary_exp: `!a && b` is `(!a) && b`, `*x = y` is `(*x) = y`.
    // parse_unary_exp bottoms out in parse_term, which admits control
    // expressions, so `&return x` / `&'a: loop {}` stay valid.
    _unary_operand: $ => choice(
      $._unary_expression,
      $.while_expression,
      $.loop_expression,
      $.return_expression,
      $.abort_expression,
      $.identified_expression,
    ),
    unary_expression: $ => seq(
      field('op', $.unary_op),
      field('expr', $._unary_operand)
    ),
    unary_op: $ => '!',

    // dereference
    dereference_expression: $ => prec.right(PRECEDENCE.unary, seq(
      '*',
      field('expr', $._unary_operand),
    )),
    // borrow
    borrow_expression: $ => prec(PRECEDENCE.unary, seq(
      $._reference,
      field('expr', $._unary_operand),
    )),
    // move or copy
    _reference: $ => choice(
      $.imm_ref,
      $.mut_ref,
    ),

    _expression_term: $ => choice(
      $.call_expression,
      $.break_expression,
      $.continue_expression,
      $.name_expression,
      $.macro_call_expression,
      $.pack_expression,
      $._literal_value,
      $.unit_expression,
      $.expression_list,
      $.annotation_expression,
      $.block,
      $.spec_block,
      $.if_expression,

      $.dot_expression,
      $.index_expression,
      $.vector_expression,
      $.match_expression,
    ),
    break_expression: $ => seq(
      'break',
      optional(field('label', $.label)),
      optional(field('break', $._expression))
    ),
    arg_list: $ => seq(
      '(',
      sepBy(',', $._expression),
      ')'
    ),

    expression_list: $ => seq('(', sepBy1(',', $._expression), ')'),
    cast_expression: $ => prec.left(PRECEDENCE.as, seq(
      field('expr', $._expression),
      'as',
      field('ty', $._type),
    )),
    dot_expression: $ => prec.left(PRECEDENCE.field, seq(
      field('expr', $._expression_term),
      '.',
      field('access', $._dot_access_term),
    )),
    // The right side of `.` is only ever a member (or method call): no
    // vector literals (`s.vector[0]` is a field access on a field named
    // `vector`) and no index — a trailing `[...]` indexes the whole chain,
    // as in the compiler's parse_dot_or_index_chain, so `a.b[0]` is
    // `(a.b)[0]`.
    _dot_access_term: $ => choice(
      $.call_expression,
      $.break_expression,
      $.continue_expression,
      $.name_expression,
      $.macro_call_expression,
      $.pack_expression,
      $._literal_value,
      $.unit_expression,
      $.expression_list,
      $.annotation_expression,
      $.block,
      $.spec_block,
      $.if_expression,
      $.match_expression,
      // positional field access `s.0` — the compiler only allows an
      // identifier or a field index after `.`
      alias(token(/\d+/), $.anon_field_index),
    ),
    index_expression: $ => prec.left(PRECEDENCE.call, seq(
      field('expr',
        $._expression_term,
      ),
      '[', sepBy(',', field('idx', $._expression)), ']'
    )),

    // Expression end

    // Fields and Bindings
    bind_list: $ => choice(
      $._bind,
      $.comma_bind_list,
      $.or_bind_list,
      $.paren_bind,
    ),
    _bind: $ => choice(
      choice(
        $.mut_bind_var,
        alias($._variable_identifier, $.bind_var)
      ),
      $.bind_unpack,
      $.at_bind,
      $._literal_value,
    ),
    bind_unpack: $ => seq(
      $.name_expression,
      optional(field('bind_fields', $.bind_fields)),
    ),
    bind_fields: $ => choice(
      $.bind_positional_fields,
      $.bind_named_fields,
    ),
    _spread_operator: _$ => '..',
    bind_positional_fields: $ => seq(
      '(', sepBy(',', choice($.bind_field, $.mut_bind_field)), ')'
    ),
    bind_field: $ => choice(seq(
      field('field', $.bind_list), // direct bind
      optional(seq(
        ':',
        field('bind', $.bind_list)
      ))
    ), $._spread_operator),
    // Fields and Bindings - End

    // literals
    imm_ref: $ => '&',
    mut_ref: $ => seq('&', 'mut'),
    block_identifier: $ => seq($.label, ':'),
    label: $ => seq('\'', $.identifier),
    // underscores are legal anywhere in the digits, including right after 0x
    address_literal: $ => /@(0x[a-fA-F0-9_]+|[0-9][0-9_]*)/,
    num_literal: $ => prec.right(seq(
      choice(
        /[0-9][0-9_]*/,
        /0x[a-fA-F0-9_]+/
      ),
      optional(choice(
        'u8',
        'u16',
        'u32',
        'u64',
        'u128',
        'u256'
      ))
    )),
    // Strings cannot contain raw newlines (compiler lexer rule); this also
    // keeps an unclosed quote from swallowing the rest of the file.
    _module_identifier: $ => alias($.identifier, $.module_identifier),
    _variable_identifier: $ => alias($.identifier, $.variable_identifier),
    identifier: $ => /(`)?[a-zA-Z_][0-9a-zA-Z_]*(`)?/,
    _reserved_identifier: $ => choice($._forall, $._exists, 'spec'),
